--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -29,6 +29,7 @@
   font-size: var(--small-font-size);
   font-weight: var(--font-medium);
   transition: 0.3s;
+  color: var(--text-color);
 }
 .nav__icon,
 .nav__close,
